RESOLVED FIXED279102
Video is sometimes mispositioned in element fullscreen window
https://bugs.webkit.org/show_bug.cgi?id=279102
Summary Video is sometimes mispositioned in element fullscreen window
Andy Estes
Reported 2024-09-03 20:39:43 PDT
SSIA
Attachments
Andy Estes
Comment 1 2024-09-03 20:39:44 PDT
Andy Estes
Comment 2 2024-09-03 20:47:53 PDT
EWS
Comment 3 2024-09-04 10:11:22 PDT
Committed 283160@main (63cdf52be469): <https://commits.webkit.org/283160@main> Reviewed commits have been landed. Closing PR #33098 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.